--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title></title>
 	<link rel="manifest" href="/manifest.json">
 	<link rel="apple-touch-icon" href="/89.png">
+	<link rel="icon" type="image/png" sizes="89x89" href="/89.png">
 <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
 <meta name="theme-color" content="#FFE1C4">
 <script src="/app.js"></script>
